---------------------------------------------------------------------------------------------------
Version: 0.4.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.4.1
Date: 2023-02-04
  Bugfixes:
    - Fixed incomplete crafting combinator mining by Nanobots (https://mods.factorio.com/mod/crafting_combinator_xeraph/discussion/63ddb2d302284dc0de4b221c)
---------------------------------------------------------------------------------------------------
Version: 0.4.0
Date: 2023-02-02
  Info:
    - Changes dependency of Rusty's Locale Utilities to Xeraph's Fork:
      - The Original Rusty's Locale Utilities can be disabled if there are no other mods that depends on it
      - Similarly, you can ignore sync mod's suggestion to enable the original Rusty's Locale Utilities if you are migrating a save
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2023-01-25
  Changes:
    - Changed the order string of 'Crafting combinator recipes' signal group. It will now be placed at the end of all other signal groups (https://mods.factorio.com/mod/crafting_combinator_xeraph/discussion/63c7efbfca0d2b9a1bfd46b5)
  Bugfixes:
    - Fixed crash while migrating a save with uninitialised signal cache lamp entity (https://mods.factorio.com/mod/crafting_combinator_xeraph/discussion/63ceddab9e540534a4b8e92d)
---------------------------------------------------------------------------------------------------
Version: 0.3.4
Date: 2023-01-11
  Changes:
    - Handles mod crash when user updates a blueprint within a blueprint book - note that blueprints in a blueprint book remains non-updateable by this mod (https://mods.factorio.com/mod/crafting_combinator_xeraph/discussion/63bdb55835fe459808a056ad)