@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.2
-Date: ????
-  Changes:
+Date: 2023-02-05
+  Bugfixes:
+    - Fixed crash caused by recipes that are not mapped to any signals (https://mods.factorio.com/mod/crafting_combinator_xeraph/discussion/63e64680caf7d3b2c92ff4f8)
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.1
 Date: 2023-02-04
